# OpenDrop

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  FINAL_VALIDATION.md  IMPROVEMENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini  ruff.toml
.claude/: launch.json
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: community.py  config.py  db.py  deps.py  geocode.py  imageproc.py  main.py  models.py  moderation.py  security.py
backend/app/routers/: corrections.py  images.py  locations.py  meta.py  moderation.py  potd.py  stats.py  votes.py
backend/tests/: conftest.py  test_api.py  test_classify.py  test_closure_detection.py  test_cluster_density.py  test_corrections.py  test_delete_own_photo.py  test_field_corrections.py  test_frontend_privacy_contract.py  test_geocode.py  test_geom_refresh.py  test_image_upload_http.py  test_invariants_property.py  test_moderation.py  test_photo_correction_guard.py  test_potd.py  test_security_hashing.py  test_seed_national.py  test_stats.py
deploy/: Caddyfile  app_role.sql
docs/: ARCHITECTURE.md  DATA_MODEL.md  FINDINGS.md  RUNBOOK.md
frontend/: admin.html  guide.html  index.html  nginx.conf  package.json  privacy.html  terms.html
migrations/: 0001_init.sql  0002_fix_source_component.sql  0003_add_consignment.sql  0004_images.sql  0005_image_vote_turnstile.sql  0006_corrections_and_signals.sql  0007_correction_anchor_and_retire_fix.sql  0008_seed_progress.sql  0009_field_corrections.sql  0013_photo_move_bands.sql  (+3 more)
(+102 files in other folders)
