[project]
name = "opendrop-backend"
version = "0.1.0"
description = "OpenDrop API + pipeline (FastAPI + PostGIS)"
requires-python = ">=3.12"
# Runtime deps live in requirements.txt (used by the Docker build). Listed here for reference.
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "psycopg[binary,pool]>=3.1,<4.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "httpx>=0.27,<1.0",
  "selectolax>=0.3,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
